--- a/src/main/resources/webserver/template/automation/user/index.html
+++ b/src/main/resources/webserver/template/automation/user/index.html
@@ -93,11 +93,11 @@
                             }
                             if(e.min) {
 
-                                $('#a' + e.id + '_min').text(e.min);
+                                //$('#a' + e.id + '_min').text(e.min);
                             }
                             if(e.max) {
 
-                                $('#a' + e.id + '_max').text(e.max);
+                                //$('#a' + e.id + '_max').text(e.max);
                             }
                         }
                     }
@@ -163,11 +163,11 @@
                                 }
                                 if(e.min) {
 
-                                    $('#a' + e.id + '_min').text(e.min);
+                                    //$('#a' + e.id + '_min').text(e.min);
                                 }
                                 if(e.max) {
 
-                                    $('#a' + e.id + '_max').text(e.max);
+                                    //$('#a' + e.id + '_max').text(e.max);
                                 }
                             }
                         }
