--- a/src/main/resources/webserver/template/movie/user/headline.html
+++ b/src/main/resources/webserver/template/movie/user/headline.html
@@ -54,6 +54,9 @@
             <img src="/static/img/icon/movie.png" width="32" height="32" class="logo">
             Filme
         </a>
+        <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/index">
+            Dashboard
+        </a>
         <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/movie">
             Filme
         </a>
@@ -215,6 +218,9 @@
             <div class="ui dropdown item">
                 <i class="bars icon"></i>
                 <div class="menu">
+                    <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/index">
+                        Dashboard
+                    </a>
                     <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/movie">
                         Filme
                     </a>
