remove search from dropdown

--- a/src/main/resources/webserver/template/automation/admin/room/roomsensorelementform.html
+++ b/src/main/resources/webserver/template/automation/admin/room/roomsensorelementform.html
@@ -71,7 +71,7 @@
             </div>
             <div class="field required">
                 <label>1. Sensorwert</label>
-                <div class="ui selection dropdown required search" id="firstSensorValueId">
+                <div class="ui selection dropdown required" id="firstSensorValueId">
                     <input type="hidden" name="firstSensorValueId" required>
                     <i class="dropdown icon"></i>
                     <div class="default text">Icon</div>
@@ -86,7 +86,7 @@
             </div>
             <div class="field required">
                 <label>2. Sensorwert</label>
-                <div class="ui selection dropdown required search" id="secondSensorValueId">
+                <div class="ui selection dropdown required" id="secondSensorValueId">
                     <input type="hidden" name="secondSensorValueId" required>
                     <i class="dropdown icon"></i>
                     <div class="default text">Icon</div>
@@ -104,7 +104,7 @@
             </div>
             <div class="field required">
                 <label>3. Sensorwert</label>
-                <div class="ui selection dropdown required search" id="thirdSensorValueId">
+                <div class="ui selection dropdown required" id="thirdSensorValueId">
                     <input type="hidden" name="thirdSensorValueId" required>
                     <i class="dropdown icon"></i>
                     <div class="default text">Icon</div>
