remove director/actop splitting

--- a/src/main/resources/webserver/template/movie/admin/headline.html
+++ b/src/main/resources/webserver/template/movie/admin/headline.html
@@ -16,13 +16,9 @@
             <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Filme Admin
         </a>
-        <a href="/movie/admin/actor" class="item {% if module == 'actor' %}active{% endif %}">
+        <a href="/movie/admin/person" class="item {% if module == 'person' %}active{% endif %}">
             <img src="/static/img/icon/person.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            Schauspieler
-        </a>
-        <a href="/movie/admin/director" class="item {% if module == 'director' %}active{% endif %}">
-            <img src="/static/img/icon/person.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            Regiseure
+            Personen
         </a>
         <a href="/movie/admin/disc" class="item {% if module == 'disc' %}active{% endif %}">
             <img src="/static/img/icon/disc.png" width="64" height="64" class="logo" style="margin: 0 auto;">
