--- a/src/main/resources/webserver/template/movie/admin/index.html
+++ b/src/main/resources/webserver/template/movie/admin/index.html
@@ -10,20 +10,12 @@
 <main class="ui main container">
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
-            <div class="card" onclick="window.location = '/movie/admin/actor'">
+            <div class="card" onclick="window.location = '/movie/admin/person'">
                 <div class="image">
                     <img src="/static/img/icon/person.png">
                 </div>
                 <div class="content">
-                    <div class="header">Schauspieler</div>
-                </div>
-            </div>
-            <div class="card" onclick="window.location = '/movie/admin/director'">
-                <div class="image">
-                    <img src="/static/img/icon/person.png">
-                </div>
-                <div class="content">
-                    <div class="header">Regiseure</div>
+                    <div class="header">Personen</div>
                 </div>
             </div>
             <div class="card" onclick="window.location = '/movie/admin/disc'">
