--- a/src/main/resources/webserver/template/movie/user/moviebox/movieboxview.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/movieboxview.html
@@ -216,9 +216,9 @@
                                     {% if movie.getDirectorIds().size() > 0 %}
                                     <h5 class="ui horizontal divider header">Regiseur(e)</h5>
                                     {% for directorId in movie.getDirectorIds() %}
-                                    {% if directorEditor.getById(directorId).isPresent() %}
-                                    <a style="color: black;" href="/movie/serachpersonmovies?directorid={{ directorId }}">
-                                        <i class="user circular icon"></i> {{ directorEditor.getById(directorId).get().getName() | escape }}
+                                    {% if personEditor.getById(directorId).isPresent() %}
+                                    <a style="color: black;" href="/movie/serachpersonmovies?id={{ directorId }}">
+                                        <i class="user circular icon"></i> {{ personEditor.getById(directorId).get().getName() | escape }}
                                     </a>
                                     {% endif %}
                                     {% endfor %}
@@ -226,9 +226,9 @@
                                     {% if movie.getActorIds().size() > 0 %}
                                     <h5 class="ui horizontal divider header">Schauspieler</h5>
                                     {% for actorId in movie.getActorIds() %}
-                                    {% if actorEditor.getById(actorId).isPresent() %}
-                                    <a style="color: black;" href="/movie/serachpersonmovies?actorId={{ actorId }}">
-                                        <i class="user circular icon"></i> {{ actorEditor.getById(actorId).get().getName() | escape }}
+                                    {% if personEditor.getById(actorId).isPresent() %}
+                                    <a style="color: black;" href="/movie/serachpersonmovies?Id={{ actorId }}">
+                                        <i class="user circular icon"></i> {{ personEditor.getById(actorId).get().getName() | escape }}
                                     </a>
                                     {% endif %}
                                     {% endfor %}
