--- a/src/main/resources/webserver/template/movie/user/headline.html
+++ b/src/main/resources/webserver/template/movie/user/headline.html
@@ -54,7 +54,7 @@
             <img src="/static/img/icon/movie.png" width="32" height="32" class="logo">
             Filme
         </a>
-        <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/index">
+        <a class="header item {% if module == 'dash' %}active{% endif %}" href="/movie/index">
             Dashboard
         </a>
         <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/movie">
