--- a/src/main/resources/webserver/template/movie/user/movie/movieform.html
+++ b/src/main/resources/webserver/template/movie/user/movie/movieform.html
@@ -161,7 +161,7 @@
                     <label>Regisseur</label>
                     <select name="directors" class="ui fluid search dropdown" multiple>
                         <option value="">Regisseur</option>
-                        {% for element in directorList %}
+                        {% for element in personList %}
                         <option value="{{ element.getId().get() }}">{{ element.getName() | escape }}</option>
                         {% endfor %}
                     </select>
@@ -170,7 +170,7 @@
                     <label>Schauspieler</label>
                     <select name="actors" class="ui fluid search dropdown" multiple>
                         <option value="">Schauspieler</option>
-                        {% for element in actorList %}
+                        {% for element in personList %}
                         <option value="{{ element.getId().get() }}">{{ element.getName() | escape }}</option>
                         {% endfor %}
                     </select>
